<resources>

    <string name="app_name">getCoordinate</string>
    <string name="touch_display">touch_me!</string>
    <string name="menu1">座標変換</string>
    <string name="menu2">IPアドレス</string>
    <string name="menu3">終了</string>
    <string name="menu4">加速度センサー</string>
    <string name="title_activity_main">座標送信</string>
    <string name="title_activity_sub">加速度センサー</string>
    <string name="title_activity_vc">音声認識</string>
    <string name="menu5">タッチ操作</string>
    <string name="menu6">しきい値の初期化</string>
    <string name="menu7">音声認識</string>
    <string name="vc">音声認識を開始</string>
    <string name="arm">つかむ/はなす</string>
    <string name="down">下降↓</string>
    <string name="up">上昇↑</string>
    <string-array name="List1">
        <item>認識可能な言葉一覧</item>
    </string-array>

</resources>