<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu1"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu1"/>
    <item
        android:id="@+id/menu2"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu2"/>
    <item
        android:id="@+id/menu4"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu5"/>
    <item
        android:id="@+id/menu6"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu6">
    </item>
    <item
        android:id="@+id/menu3"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu3"/>

</menu>